fixed several bugs, runs perfectly now, adding more debugging help and streamlined the plugin